# apc-vision-toolbox

./: README.md
calibration/: calibSeq.m  calibrate.m  demo.m  getCalib.m  loadCalib.m
calibration/lib/peter/: ransac.m
convnet-training/: apc.hpp  compile.sh  marvin.hpp
convnet-training/models/hha-fcn/: train_shelf_depth.json  train_tote_depth.json
convnet-training/models/rgb-fcn/: train_shelf_color.json  train_tote_color.json
convnet-training/models/rgb-hha-fcn/: train_shelf_color_depth.json  train_tote_color_depth.json
convnet-training/models/weights/: download_weights.sh
convnet-training/util/: random_utils.h  system_utils.h
data/sample/calibration/shelf/: cam.poses.A.txt  cam.poses.B.txt  cam.poses.C.txt  cam.poses.D.txt  cam.poses.E.txt  cam.poses.F.txt  cam.poses.G.txt  cam.poses.H.txt  cam.poses.I.txt  cam.poses.J.txt  cam.poses.K.txt  cam.poses.L.txt
data/sample/calibration/tote/: cam.poses.txt
data/sample/scene-0000/: cam.info.txt
data/sample/scene-0000/masks/: creativity_chenille_stems.thresh.txt  i_am_a_bunny_book.thresh.txt  kleenex_tissue_box.thresh.txt  laugh_out_loud_joke_book.thresh.txt
evaluation/: benchmark.m  getError.m  predictions.mat  prepBenchmark.m  runEval.m
realsense-standalone/: stream.cpp
realsense-standalone/scripts/: resetUSBports.sh
realsense-standalone/util/: depth_utils.h  random_utils.h
realsense_standalone/: compile.sh
realsense_standalone/util/: depth_utils.h
rgbd-utils/matlab/: demo.m  fillHoles.m  getCalib.m  getHHA.m  getScenePointCloud.m  loadCalib.m  loadScene.m  readDepth.m  writeDepth.m
rgbd_io/matlab/: annotator.m  checkPose.m  convert.m  convertAll.m  demo.m  genConfig.m  genPC.m  genPages.m  genPotree.m  loadSeq.m  readDepth.m  recount.m  writeDepth.m
ros-packages/catkin_ws/src/marvin_convnet/: CMakeLists.txt  package.xml
ros-packages/catkin_ws/src/marvin_convnet/models/competition/: download_weights.sh  net.json
ros-packages/catkin_ws/src/marvin_convnet/msg/: object_mask.msg
ros-packages/catkin_ws/src/marvin_convnet/src/: detect.cu  marvin.hpp  save_images.cpp
ros-packages/catkin_ws/src/marvin_convnet/srv/: DetectObjects.srv
ros-packages/catkin_ws/src/pose_estimation/: CMakeLists.txt  package.xml
ros-packages/catkin_ws/src/pose_estimation/msg/: ObjectHypothesis.msg
ros-packages/catkin_ws/src/pose_estimation/src/: adjustShelfPose.m  adjustTotePose.m  demo.m  denoisePointCloud.m  getCameraPointClouds.m  getData.m  getEmptyObjectHypothesis.m  getObjectHypothesis.m  getObjectMasks.m  getObjectPose.m  getObjectPoseNoDepth.m  getSegmentedPointCloud.m  make.m  makeShelfBin.m  mdemo.m  multiQueryKNNSearchImplGPU.m  pcregrigidGPU.m  serviceCallback.m  startService.m  visualizeResults.m
ros-packages/catkin_ws/src/pose_estimation/src/models/bins/: binA.ply  binB.ply  binC.ply  binD.ply  binE.ply  binF.ply  binG.ply  binH.ply  binI.ply  binJ.ply  binK.ply  binL.ply  tote.ply
ros-packages/catkin_ws/src/pose_estimation/src/models/objects/: barkely_hide_bones.ply  centerObject.m  cloud_b_plush_bear.ply  command_hooks.ply  cool_shot_glue_sticks.ply  crayola_24_ct.ply  creativity_chenille_stems.ply  dasani_water_bottle.ply  dove_beauty_bar.ply  easter_turtle_sippy_cup.ply  elmers_washable_no_run_school_glue.ply  expo_dry_erase_board_eraser.ply  fiskars_scissors_red.ply  fitness_gear_3lb_dumbbell.ply  flipObject.m  oral_b_toothbrush_green.ply  oral_b_toothbrush_red.ply  platinum_pets_dog_bowl.ply  rawlings_baseball.ply  rolodex_jumbo_pencil_cup.ply  safety_first_outlet_plugs.ply  scotch_duct_tape.ply  soft_white_lightbulb.ply  staples_index_cards.ply  up_glucose_bottle.ply  womens_knit_gloves.ply  woods_extension_cord.ply
ros-packages/catkin_ws/src/pose_estimation/srv/: EstimateObjectPose.srv
ros-packages/catkin_ws/src/realsense_camera/: CMakeLists.txt  package.xml
ros-packages/catkin_ws/src/realsense_camera/src/: capture_v2.cpp  display.hpp
ros-packages/catkin_ws/src/realsense_camera/srv/: StreamSensor.srv
ros_packages/marvin_fcn/: CMakeLists.txt  package.xml
ros_packages/marvin_fcn/src/: detect.cu  marvin.hpp
ros_packages/realsense_sensor/: CMakeLists.txt  package.xml
ros_packages/realsense_sensor/src/: capture_v1.cpp  capture_v2.cpp
sample_data/calibration/shelf/: cam.poses.A.txt  cam.poses.B.txt  cam.poses.C.txt  cam.poses.D.txt  cam.poses.E.txt  cam.poses.F.txt  cam.poses.G.txt  cam.poses.H.txt  cam.poses.I.txt  cam.poses.J.txt  cam.poses.K.txt  cam.poses.L.txt
sample_data/calibration/shelf/seq-A/: cam.info.txt
sample_data/calibration/shelf/seq-B/: cam.info.txt
sample_data/calibration/shelf/seq-C/: cam.info.txt
sample_data/calibration/shelf/seq-D/: cam.info.txt
sample_data/calibration/shelf/seq-E/: cam.info.txt
sample_data/calibration/shelf/seq-F/: cam.info.txt
sample_data/calibration/shelf/seq-G/: cam.info.txt
sample_data/calibration/shelf/seq-H/: cam.info.txt
sample_data/calibration/shelf/seq-I/: cam.info.txt
sample_data/calibration/shelf/seq-J/: cam.info.txt
sample_data/calibration/shelf/seq-K/: cam.info.txt
sample_data/calibration/shelf/seq-L/: cam.info.txt
sample_data/calibration/tote/: cam.poses.txt
sample_data/calibration/tote/seq-tote/: cam.info.txt
sample_data/test/seq-000000/: cam.info.txt
vis-utils/: colorPalette.mat  dispObjPose.m  getColorPalette.m  labelList.csv  parseLabels.m  showObjectPose.m  visObjLabels.m  visRepImage.m
visualization/: dispObjPose.m  splitToteIm.m  visObjLabels.m  visualizeResults.m
